# repo-query

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: release.yaml  rust.yml
src/: constants.rs  main.rs  prelude.rs
src/conversation/: data.rs  mod.rs  prompts.rs
src/db/: chroma.rs  mod.rs  qdrant.rs
src/embeddings/: fastembed.rs  mod.rs  onnx.rs
src/github/: mod.rs
src/routes/: events.rs  mod.rs
src/utils/: functions.rs  macros.rs  mod.rs
src/utils/conversation/: mod.rs  prompts.rs
