[package]
name = "onn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
async-trait = "0.1.68"
dotenv = "0.15.0"
ndarray = "0.15.6"
ort = "1.15.1"
qdrant-client = "1.3.0"
rayon = "1.7.0"
reqwest = "0.11.18"
serde = "1.0.164"
tokenizers = "0.13.3"
openai-api-rs = {git = "https://github.com/Anush008/openai-api-rs.git", branch = "main"}
zip = "0.6.6"
rust-fuzzy-search = "0.1.1"
text-splitter = "0.4.2"
serde_json = "1.0.103"
actix-web-lab = "0.19.1"
actix-rt = "2.8.0"
tracing-actix-web = "0.7.5"
env_logger = "0.10.0"
tokio = "1.29.1"
